<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/img_photo_detail"
          android:layout_width="match_parent"
          android:layout_height="500dp"
          android:adjustViewBounds="true"
          android:contentDescription="@string/detail_photo"
          android:scaleType="centerCrop"
          tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="16dp">

          <TextView
            android:id="@+id/total_views_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:text="@string/views_photo"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_eye"
            app:drawableTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </FrameLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
          android:id="@+id/user_profile_image"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:src="@drawable/ic_user"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="@string/user_photo_profile" />

        <LinearLayout
          android:id="@+id/user_info_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:orientation="vertical"
          app:layout_constraintBottom_toBottomOf="@+id/user_profile_image"
          app:layout_constraintStart_toEndOf="@+id/user_profile_image"
          app:layout_constraintTop_toTopOf="@+id/user_profile_image">

          <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_s_name"
            android:textSize="20sp"
            android:textStyle="bold" />

          <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="12sp" />
        </LinearLayout>

        <TextView
          android:id="@+id/tv_description_header"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/description"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="@+id/user_profile_image"
          app:layout_constraintTop_toBottomOf="@+id/user_info_layout" />

        <TextView
          android:id="@+id/tv_description_content"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="2dp"
          android:text="@string/deskripsi_gambar"
          android:textSize="12sp"
          app:layout_constraintStart_toStartOf="@+id/tv_description_header"
          app:layout_constraintTop_toBottomOf="@+id/tv_description_header"
          tools:text="Gambar ini adalah ..." />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ProgressBar
      android:id="@+id/pb_detail"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>