<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:elevation="8dp"
  app:cardCornerRadius="8dp"
  app:cardElevation="4dp"
  app:cardMaxElevation="4dp"
  app:cardUseCompatPadding="true">

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/img_photos"
      android:layout_width="match_parent"
      android:layout_height="256dp"
      android:contentDescription="@string/thumbnail_photo"
      android:scaleType="centerCrop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="start|bottom"
      android:layout_margin="8dp">

      <ImageView
        android:id="@+id/profile_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/user_photo_profile" />

      <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:gravity="bottom"
        android:text="@string/user_owner"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        tools:text="Nur Rizki Adi Prasetyo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </FrameLayout>

</androidx.cardview.widget.CardView>